compiler/tests/fail/common/storage_signature_mismatch.jazz
export fn sum() -> stack u32 {
  reg u32 r = 0;
  return r;
}
